src/game.css
.pregame-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 40px;
}

.game-container {
  margin-left: 10px;
  width: 900px;
  height: 600px;
  border: 10px solid white;
  background-color: grey;
  border-radius: 10px;
  display: inline-block;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-right: 25px;
}

.chat {
  background-color: lightgrey;
  width: 200px;
  height: 600px;
  border: 10px solid white;
  border-radius: 10px;
  display: inline-block;
  overflow-y: scroll;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.chat-title {
  position: absolute;
  text-align: center;
  width: 190px;
  background-color: grey;
  padding-top: 20px;
  padding-bottom: 20px;
  color: white;
  font-size: 20px;
}

.chat-textbox-container {
  position: absolute;
  text-align: center;
  margin-top: 540px;
  height: 20px;
  background-color: grey;
  padding-top: 20px;
  padding-bottom: 20px;
  width: 190px;
}

.chat-textbox {
  height: 20px;
}


.gameroom-title {
  font-size: 50px;
  text-align: center;
  color: white;
  padding-bottom: 10px;
}

.messages-container {
  padding-top: 70px;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 70px;
}

.message-container {
  
}
.message {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    background-color: white;
    margin-bottom: 10px;
    font-size: 12px;
    border-radius: 5px;
    word-wrap: break-word;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.message-sender {
  margin-left: 5px;
  margin-bottom: 3px;
  font-size: 11px;
  font-weight: bold;
}

